--- a/www/views/profile-documents.hbs
+++ b/www/views/profile-documents.hbs
@@ -1,6 +1,5 @@
 
 	<div id="profileTabs" class="container clearfix">
-		{{> header}}
 
 		<div class="content profile">
 			
@@ -22,7 +21,7 @@
 					{{/ data.documents}}
 					{{^ data.documents}}
 						<li class="clearfix">
-							<p class="empty">No tienes documentos guardados</p>				
+							<p class="empty">No tienes documentos guardados.</p>				
 						</li>
 					{{/ data.documents}}
 				</ul>
@@ -33,6 +32,5 @@
 				<a class="link_legal" onclick="window.open('https://www.pickwin.net/aviso-de-privacidad', '_blank', 'location=yes')" >Política de privacidad</a>
 			</div>
 		</div><!-- content -->
-		{{> footer}}
+
 	</div><!-- container -->
-	
