--- a/www/views/profile-notifications.hbs
+++ b/www/views/profile-notifications.hbs
@@ -14,7 +14,7 @@
 				</ul>
 			</div>
 			<div class="tab_profile notifications_center">
-				<p class="empty">Por el momento, no existen los ajustes de notificaciones</p>
+				<p class="empty">Por el momento, no hay ajustes de notificaciones que mostrar.</p>
 				{{!-- <a class="green_button">Guardar</a> --}}
 			</div>
 			
