--- a/www/views/profile-history.hbs
+++ b/www/views/profile-history.hbs
@@ -1,57 +1,41 @@
 
 	<div id="profileTabs" class="container clearfix">
-		{{> header}}
 
 		<div class="content profile">
 			
 			<div class="tabs_quiniela clearfix">
 				<ul>
-					<li class="selected"><a class="hook" data-resource="profile-cards" href="profile.html">Tarjetas</a></li>
-					<li><a class="hook"  href="profile.html">Documentos</a></li>
+					<li><a class="hook" data-resource="profile-cards" href="profile.html">Tarjetas</a></li>
+					<li><a class="hook" data-resource="profile-documents"  href="profile.html">Documentos</a></li>
 					<li><a class="hook" data-resource="profile-withraw" href="profile.html">Retirar fondos</a></li>
-					<li><a class="hook" data-resource="profile-history" href="profile.html">Historial</a></li>
+					<li class="selected"><a>Historial</a></li>
 					<li><a class="hook" data-resource="profile-notifications" href="profile.html">Notificaciones</a></li>
 				</ul>
 			</div>
-			<div class="tab_profile radio_group tarjetas">
+			<div class="tab_profile transactions">
+				<h3>{{header_title}}</h3>
 				<ul>
-					<li class="clearfix">
-						<input type="radio" id="mastercard" name="tarjeta">
-						<label for="mastercard" ><img src="{{cordova_full_path}}images/mastercard.png"><span class="terminacion">1234</span></label>
-						
-						<div class="check"></div>
-						<div class="edit_tarjeta">
-							<a href=""><img src="{{cordova_full_path}}images/editar.png"></a>
-							<a href=""><img src="{{cordova_full_path}}images/eliminar.png"></a>
-						</div>							
-					</li>
+					{{# transactions}}
+						<li class="clearfix">
+							<input type="radio" id="mastercard" name="tarjeta">
+							<label for="mastercard" ><img src="{{cordova_full_path}}images/mastercard.png"><span class="terminacion">1234</span></label>
+							
+							<div class="check"></div>
+							<div class="edit_tarjeta">
+								<a href=""><img src="{{cordova_full_path}}images/editar.png"></a>
+								<a href=""><img src="{{cordova_full_path}}images/eliminar.png"></a>
+							</div>							
+						</li>
+					{{/ transactions}}
 				</ul>
 				<a class="agregar_tarjeta" href=""><img src="{{cordova_full_path}}images/agregar_tarjeta.png"></a>
 			</div>
-			<div class="agregartarjeta clearfix" style="display: none;">
-				<h3>AGREGAR TARJETA</h3>
-				<form>
-					<input type="text" placeholder="Nombre como aparece en la tarjeta">
-					<input type="text" placeholder="Número de tarjeta">
-					<div class="fecha_vencimiento clearfix">
-						<select>
-							<option>Mes</option>
-						</select>
-						<select>
-							<option>Año</option>
-						</select>
-						<input type="text" placeholder="CVV">
-					</div>
-					<div class="submit_holder">
-						<input type="submit" value="send">
-					</div>
-				</form>
-			</div>
+			
 			<div class="legales clearfix">
 				<a class="link_legal" onclick="window.open('https://www.pickwin.net/terminos-y-condiciones', '_blank', 'location=yes')" >Términos y condiciones | </a>
 				<a class="link_legal" onclick="window.open('https://www.pickwin.net/aviso-de-privacidad', '_blank', 'location=yes')" >Política de privacidad</a>
 			</div>
 		</div><!-- content -->
-		{{> footer}}
+
 	</div><!-- container -->
 	
