--- a/www/views/register.hbs
+++ b/www/views/register.hbs
@@ -5,9 +5,9 @@
 			<img src="{{cordova_full_path}}images/tuprimeravez.svg">
 			<p>Regístrate y te regalamos la entrada  a las quinielas 'Tu Primera Vez',  además te regalamos 100 Pickcoins  para que comiences a jugar.</p>
 		</div>
-		<a class="facebook" id="facebookLoginTrigger">
+		<!-- <a class="facebook" id="facebookLoginTrigger">
 			<img class="fb_registry" src="{{cordova_full_path}}images/fb_registry.png">
-		</a>
+		</a> -->
 		<div class="form">
 			<form id="register_form" method="POST" action="">
 				<h3>o</h3>
