--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -256,8 +256,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .quiniela_info {margin-right: 10px; }
 
 .quinielas_dropdowns {width: 100%; margin: 20px 0;}
-.quinielas_dropdowns a {color: #fff; text-decoration: none; display: block; border: 1px solid #414042; padding: 5px; float: left; border-radius: 5px; margin-right: 5%; width: 47.5%;  text-align: center;}
-.quinielas_dropdowns a:last-child {margin-right: 0px;}
+.quinielas_dropdowns select {color: #fff; background: #000; text-decoration: none; display: block; border: 1px solid #414042; padding: 5px; float: left; border-radius: 5px; margin-right: 5%; width: 47.5%;  text-align: center;}
+.quinielas_dropdowns select:last-child {margin-right: 0px;}
 
 .quiniela_single .partidos {width: 100%; border-top: 1px solid #77BC1F;}
 .quiniela_single .partidos h3 {font-weight: 300; margin-top: 10px; margin-bottom: 10px; text-align: center; font-size: 12px;}
@@ -519,8 +519,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .radio_group ul li .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 0px; left: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .radio_group ul li .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .radio_group ul li input[type=radio] {position: absolute;visibility: hidden;}
-.radio_group ul li input[type=radio]:checked ~ .check { border: 5px solid #0DFF92;}
-.radio_group ul li input[type=radio]:checked ~ .check::before{ background: #0DFF92;}
+.radio_group ul li input[type=radio]:checked ~ .check { border: 5px solid #598D16;}
+.radio_group ul li input[type=radio]:checked ~ .check::before{ background: #598D16;}
 .radio_group ul li label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 1.35em; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 
 .profile .agregartarjeta {width: 100%; background: #000; margin-top: 10px; }
