--- a/www/css/style.css
+++ b/www/css/style.css
@@ -518,8 +518,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .radio_group ul li .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; top: 0px; left: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
 .radio_group ul li .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 .radio_group ul li input[type=radio] {position: absolute;visibility: hidden;}
-.radio_group ul li input[type=radio]:checked ~ .check { border: 5px solid #0DFF92;}
-.radio_group ul li input[type=radio]:checked ~ .check::before{ background: #0DFF92;}
+.radio_group ul li input[type=radio]:checked ~ .check { border: 5px solid #598D16;}
+.radio_group ul li input[type=radio]:checked ~ .check::before{ background: #598D16;}
 .radio_group ul li label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 1.35em; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
 
 
