Initial pool sort and show indicator of live games in the lobby

--- a/www/views/lobby.hbs
+++ b/www/views/lobby.hbs
@@ -1,10 +1,6 @@
 
 	<div id="lobbyContainer" class="container clearfix lobby">
-		<div class="content quinielas">
-
-			{{# data.pools}}
-				{{> each-quiniela full_path = cordova_full_path}}
-			{{/ data.pools}}
+		<div id="insertFeed" class="content quinielas">
 
 		</div><!-- content -->
 	</div><!-- container -->
@@ -13,4 +9,4 @@
 	
 	<div id="misQuinielas" class="misquinielas overlay">
 		
-	</div><!-- misquinielas overlay -->
+	</div> <!-- misquinielas overlay -->
