--- a/www/css/style.css
+++ b/www/css/style.css
@@ -185,7 +185,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_content .quiniela_info span {display: block; margin-bottom: 2px;}
 .quiniela_content .quiniela_info span.limite {color: #F6A623;}
 .quiniela_content .quiniela_info span.live {color: #77BC1F; position: relative; line-height: 1rem;}
-.quiniela_content .quiniela_info span.live::after{ color: #77BC1F; content: "•"; font-size: 2rem; line-height: 0.75rem; position: relative; vertical-align: top; }
+.quiniela_content .quiniela_info span.live::before{ color: #77BC1F; content: "•"; font-size: 2rem; line-height: 0.75rem; position: relative; vertical-align: top; }
 
 .quiniela .quiniela_content div {float: left;}
 .quiniela .quiniela_content span {display: block;}
@@ -195,8 +195,8 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 /*quiniela open*/
 
 .quiniela.quiniela_open .quiniela_content .quiniela_info {width: 50%; float: left;}
-.quiniela.quiniela_open .quiniela_content .quiniela_entrada {width: 25%; float: left;}
-.quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 25%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_entrada {width: 20%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 20%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa span.number {float: left; margin-left: 5px; color: #77BC1F;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa img {margin-top: -2px;}
 
