--- a/www/views/profile-history.hbs
+++ b/www/views/profile-history.hbs
@@ -5,7 +5,7 @@
 			
 			<div class="tabs_quiniela clearfix">
 				<ul>
-					<li><a class="hook" data-resource="profile-cards" href="profile.html">Tarjetas</a></li>
+					<li><a class="hook" data-resource="profile-methods" href="profile.html">Tarjetas</a></li>
 					<li><a class="hook" data-resource="profile-documents"  href="profile.html?method=documents">Documentos</a></li>
 					<li><a class="hook" data-resource="profile-withraw" href="profile.html?method=withraw">Retirar fondos</a></li>
 					<li class="selected"><a>Historial</a></li>
