--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -1,5 +1,5 @@
 	
-	<div id="profileTabs" class="container clearfix">
+	<div id="profileTabs" class="container clearfix methods">
 	
 		<div class="content profile">
 			
@@ -37,17 +37,43 @@
 			</div>
 			<div id="addNewCard" class="agregartarjeta clearfix backed_modal" style="display: none;">
 				<h3>AGREGAR TARJETA</h3>
-				<form>
-					<input type="text" placeholder="Nombre como aparece en la tarjeta">
-					<input type="text" placeholder="Número de tarjeta">
+				<form id="addCardForm" method="POST" action="">
+					<input name="holder_name" data-openpay-card="holder_name" id="holder_name" type="text" placeholder="Nombre como aparece en la tarjeta">
+					<input name="card_number" data-openpay-card="card_number" id="card_number" type="text" placeholder="Número de tarjeta">
 					<div class="fecha_vencimiento clearfix">
-						<select>
+						<select name="expiration_month" id="expiration_month" data-openpay-card="expiration_month">
 							<option>Mes</option>
+							<option value="1">Ene</option>
+							<option value="2">Feb</option>
+							<option value="3">Mar</option>
+							<option value="4">Abr</option>
+							<option value="5">May</option>
+							<option value="6">Jun</option>
+							<option value="7">Jul</option>
+							<option value="8">Ago</option>
+							<option value="9">Sept</option>
+							<option value="10">Oct</option>
+							<option value="11">Nov</option>
+							<option value="12">Dic</option>
 						</select>
-						<select>
+						<select name="expiration_year" id="expiration_year" data-openpay-card="expiration_year">
 							<option>Año</option>
+							<option value="17">2017</option>
+							<option value="18">2018</option>
+							<option value="19">2019</option>
+							<option value="20">2020</option>
+							<option value="21">2021</option>
+							<option value="22">2022</option>
+							<option value="23">2023</option>
+							<option value="24">2024</option>
+							<option value="25">2025</option>
+							<option value="26">2026</option>
+							<option value="27">2027</option>
+							<option value="28">2028</option>
+							<option value="29">2029</option>
+							<option value="30">2030</option>
 						</select>
-						<input type="text" placeholder="CVV">
+						<input name="cvv2" id="cvv2" type="text" placeholder="CVV" data-openpay-card="cvv2">
 					</div>
 					<div class="submit_holder">
 						<input type="submit" value="send">
