--- a/www/css/style.css
+++ b/www/css/style.css
@@ -665,7 +665,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	/*Filters */
 	.filtros .filtros_deporte ul li{width: 25%;}
 	
-	p.empty{}
+	p.empty{font-size: 1rem; letter-spacing: 1px; text-align: center;}
 	.profile .legales,
 	.login .legales{ width: 100%; margin-top: 5%; text-align: center; position: absolute; bottom: 32px;}
 	.profile.withraw{}
@@ -673,5 +673,6 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 	.backed_modal{ display: block; }
 	.backed_modal::before{ content: ""; }
-
+	
+	.header .header_right .header_user_info{width: 84%;}
 	/* https://www.pickwin.net/users/reset_password/05763732b4adbc6cf2644124d0e91ed991fb741a1cd3f966b447bd1378f8a8a3 */
