--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -156,7 +156,7 @@ body {width: 100%; margin: 0 auto; font-weight: 300; font-family: 'Lato'!importa
 
 /*** MENU ***/
 
-.menu {width: 100%; height: 50px; background: #BCBCBC; position: fixed; bottom: 0; border-top: 1px solid #8A8A8D; z-index: 100;}
+.menu {width: 100%; height: 50px; background: #BCBCBC; position: fixed; bottom: 0; border-top: 1px solid #8A8A8D; z-index: 200;}
 .menu ul {list-style: none; padding: 5px 0 0 0; margin: 0px;}
 .menu ul li {display: block; float: left; border-right: 1px solid #8A8A8D; width: 20%; height: 36px; background-image: url('images/menu_sprite.png'); background-repeat:  no-repeat; }
 .menu ul li:last-child{border-right: 0px!important;}
@@ -240,7 +240,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*** MIS QUINIELAS OVERLAY ***/
 
-.misquinielas {position: fixed; top: 87px; width: 100%; margin-left: 97%; background: url('images/bg_trans_quinielas.png') repeat; height: 100%; padding-left: 1%;}
+.misquinielas {position: fixed; top: 87px; width: 100%; margin-left: 97%; background: url('images/bg_trans_quinielas.png') repeat; height: 100%; padding-left: 1%; z-index: 100;}
 .quiniela_open {border-left: 3px solid #77BC1F;}
 .quiniela_live {border-left: 3px solid #F6A623;}
 .quiniela_closed {border-left: 3px solid #FF576C;}
@@ -263,16 +263,16 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .partidos h3 {font-weight: 300; margin-top: 10px; margin-bottom: 10px; text-align: center; font-size: 12px;}
 .quiniela_single .partidos .opciones_partido {width: 100%; padding: 10px 0; border-top: 1px solid #8A8A8D;  margin-bottom: 10px;}
 .quiniela_single .partidos .opciones_partido span {width: 33.33%; float: left; display: block; text-align: center; font-size: 12px;}
-.quiniela_single .partidos .partido {width: 100%; margin-bottom: 10px; border-top: 1px solid #8A8A8D; padding-top: 10px; position: relative;}
+.quiniela_single .partidos .partido {padding-bottom: 30px; width: 100%; margin-bottom: 10px; border-top: 1px solid #8A8A8D; padding-top: 10px; position: relative;}
 .quiniela_single .partidos .partido .opcion_partido .linea {width: 100%; margin-top: 0px; float: left;}
 .quiniela_single .partidos .partido .opcion_partido .linea span {width: 100%; margin-top: 20px; text-align: center; display: block;}
 .quiniela_single .partidos .partido .opcion_partido.local {width: 33.33%; float: left;}
 .quiniela_single .partidos .partido .opcion_partido.local .equipo {float: left;}
 .quiniela_single .partidos .partido .opcion_partido.local input {float: left; margin-right: 10px;}
-.quiniela_single .partidos .partido .opcion_partido.local img {float: left; margin-right: 10px;}
+.quiniela_single .partidos .partido .opcion_partido.local img {float: left; margin-right: 5px; margin-left: 15px;}
 .quiniela_single .partidos .partido .opcion_partido.cierre {width: 33.33%; float: left; position: relative; height: 50px;}
 .quiniela_single .partidos .partido .opcion_partido.cierre input {width: 100%; text-align: center;}
-.quiniela_single .partidos .partido .opcion_partido.cierre span {text-align: center; width: 100%; display: block; position: absolute; bottom: 0px;}
+.quiniela_single .partidos .partido .opcion_partido.cierre span {text-align: center; width: 100%; display: block; position: absolute; bottom: 0px; top: 28px;}
 .quiniela_single .partidos .partido .opcion_partido.visitante {width: 33.33%; float: right;}
 .quiniela_single .partidos .partido .opcion_partido.visitante .equipo {float: right; margin-left: 10px;}
 .quiniela_single .partidos .partido .opcion_partido.visitante .equipo span {display: block;}
@@ -322,6 +322,15 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .desempates .desempate.desempate_uno .desempate_input span {float: left; margin-right: 5px; padding-top: 7px;}
 .quiniela_single .desempates .desempate.desempate_uno .desempate_input input[type="text"] {width: 30px; float: left; margin-right: 5px;}
 .quiniela_single .desempates .desempate.desempate_tres .desempate_input input[type="radio"] {width: 30px; float: left; margin-right: 5px; margin-top: 10px; }
+
+.radio_group input[type=radio] {position: absolute; visibility: hidden;}
+.radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16;}
+.radio_group input[type=radio]:checked ~ .check::before{ background: #598D16;}
+.radio_group label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 12px; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
+.local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.visitante.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; right: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.empate.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: 35%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 
 
 .quiniela_single .quiniela_registro_overlay {position: fixed; top: 0px; padding-top: 200px; width: 95%; background: url('images/bg_trans_negro.png') repeat;  }
@@ -522,6 +531,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .radio_group ul li input[type=radio]:checked ~ .check { border: 5px solid #598D16;}
 .radio_group ul li input[type=radio]:checked ~ .check::before{ background: #598D16;}
 .radio_group ul li label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 1.35em; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
+
 
 .profile .agregartarjeta {width: 100%; background: #000; margin-top: 10px; }
 .profile .agregartarjeta h3 {width: 100%; font-weight: normal; padding: 10px 0; text-align: center; border-top: 1px solid #77BC1F; margin-top: 0px;}
