--- a/www/css/style.css
+++ b/www/css/style.css
@@ -675,4 +675,6 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.backed_modal::before{ content: ""; }
 	
 	.header .header_right .header_user_info{width: 84%;}
+	.header .header_right .header_filtros{ width: 68px; float: right; text-align: center; position: absolute; top: 1rem; right: 0;}
+	.header .header_right .header_filtros h4{margin-bottom: 0.5rem;}
 	/* https://www.pickwin.net/users/reset_password/05763732b4adbc6cf2644124d0e91ed991fb741a1cd3f966b447bd1378f8a8a3 */
