--- a/www/views/partials/header.hbs
+++ b/www/views/partials/header.hbs
@@ -18,7 +18,7 @@
 							<img src="{{../me.avatar_dir}}{{../me.avatar}}">
 						</div>
 					{{/ me.avatar}}
-					<h2><a class="hook" data-resource="profile" href="profile.html">{{me.nick}}</a></h2>
+					<h2><a class="hook" data-resource="profile-methods" href="profile.html">{{me.nick}}</a></h2>
 				</div>
 				<div class="user_money clearfix">
 					<div class="money_pesos clearfix">
