--- a/www/views/partials/search-results.hbs
+++ b/www/views/partials/search-results.hbs
@@ -1,5 +1,5 @@
 {{# if success}}
-	<small>Resultados:</small>
+	<small class="small_text">Resultados:</small>
 	{{# pool}}
 		{{> each-quiniela }}
 	{{/ pool}}
