--- a/www/views/register-success.hbs
+++ b/www/views/register-success.hbs
@@ -6,6 +6,6 @@
 				<p>Gracias por registrarte en Pickwin. <br> ¡Ahora puedes comenzar a jugar!</p>
 				<p>Inicia sesión para jugar tu primera quiniela.</p>
 			</div>
-			<a class="green_button hook" data-resource="lobby" href="lobby.html">Ir al lobby</a>
+			<a class="green_button hook" data-resource="first-lobby" href="lobby.html" >Ir al lobby</a>
 		</div>
 	</div>
