--- a/www/views/profile.hbs
+++ b/www/views/profile.hbs
@@ -16,20 +16,19 @@
 				<ul>
 					{{# data.cards}}
 						<li class="clearfix">
-							<input type="radio" id="mastercard" name="tarjeta" value="{{id}}">
-							<label for="mastercard" ><img src="{{cordova_full_path}}images/{{brand}}.png"><span class="terminacion">{{bank_name}} {{card_number}}</span></label>
+							<input type="radio" id="{{brand}}{{id}}" data-brand="{{brand}}" name="tarjeta" value="{{id}}">
+							<label for="{{brand}}{{id}}" ><img src="{{cordova_full_path}}images/{{brand}}.png"><span class="terminacion">{{bank_name}} ************{{card_number}}</span></label>
 							
 							<div class="check"></div>
 							<div class="edit_tarjeta">
-								<a href=""><img src="{{cordova_full_path}}images/editar.png"></a>
-								<a href=""><img src="{{cordova_full_path}}images/eliminar.png"></a>
+								<a data-id="{{id}}"  data-digits="{{card_number}}" class="delete_card"><img src="{{cordova_full_path}}images/eliminar.png"></a>
 							</div>							
 						</li>
 					{{/ data.cards}}
 
 					{{^ data.cards}}
 						<li class="clearfix">
-							<p>No se encontró ningún método de pago.</p>					
+							<p>No tienes ningún método de pago registrado.</p>					
 						</li>
 					{{/ data.cards}}
 				</ul>
