--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -59,129 +59,163 @@
 					</div><!-- quiniela_content -->
 				</div><!-- quiniela -->
 			</a><!-- link_wrapper -->
+			
 			{{^ data.closed}}
 				<div class="quinielas_dropdowns clearfix">
-						<a href="">Copiar picks</a>
-						<a href="">Registros</a>			
+						
+						<form id="pickActionsForm" action="" method="POST">
+							<select id="select_copy_picks" name="select_copy_picks">
+								<option value="">Copiar picks</option>
+							</select>
+
+							<select id="select_entries" name="select_entries">
+								<option value="">Registros</option>
+							</select>
+						</form>
 				</div><!-- dropdowns -->
-			{{/ data.closed}}
 
-			<div id="insertPartidos" class="partidos clearfix">
+				<div id="insertPartidos" class="partidos clearfix">
 
+				</div><!-- partidos -->
 				
-			</div><!-- partidos -->
+				{{# if data.tiebreakers}}
+					<div class="desempates clearfix">
+						<h3>DESEMPATE</h3>
+							{{# data.tiebreakers}}
+								{{# if_eq type 'score'}}
+									<div class="desempate desempate_uno clearfix">
+										
+										<div class="desempate_left">
+											<span>{{label}}</span>
+										</div>
+										<div class="desempate_input">
+											<span>LOC</span>
+											<input type="tel" name="desempate_uno_local">
+											<span>-</span>
+											<input type="tel" name="desempate_uno_visitante">
+											<span>VIS</span>
+										</div><!-- desempate_input -->
+									
+									</div><!-- desempate_uno -->
+								{{/ if_eq }}
+
+								{{# if_eq type 'number'}}
+									<div class="desempate desempate_dos clearfix">
+										<div class="desempate_left">
+											<span>{{label}}</span>
+										</div>
+										<div class="desempate_input">
+											<input type="tel" name="desempate_dos_minuto">
+										</div><!-- desempate_input -->
+									</div><!-- desempate_dos -->
+								{{/ if_eq }}
+
+								{{# if_eq type 'other'}}
+									<div class="desempate desempate_tres clearfix">
+										<div class="desempate_left">
+											<span>{{label}}</span>
+										</div>
+										<div class="desempate_input">
+											<span>SI</span>
+											<input type="radio" name="desempate_tres" value="si">
+											<span>NO</span>
+											<input type="radio" name="desempate_tres" value="no">
+										</div><!-- desempate_input -->
+									</div><!-- desempate_tres -->
+								{{/ if_eq }}
+							{{/ data.tiebreakers}}
+
+					</div><!-- dempates -->
+				{{/ if }}
+
+			{{/ data.closed}}
 			
-			{{# if data.tiebreakers}}
-				<div class="desempates clearfix">
-					<h3>DESEMPATE</h3>
-						{{# data.tiebreakers}}
-							{{# if_eq type 'score'}}
-								<div class="desempate desempate_uno clearfix">
-									<div class="desempate_left">
-										<span>{{label}}</span>
-									</div>
-									<div class="desempate_input">
-										<span>LOC</span>
-										<input type="text" name="desempate_uno_local">
-										<span>-</span>
-										<input type="text" name="desempate_uno_visitante">
-										<span>VIS</span>
-									</div><!-- desempate_input -->
-								</div><!-- desempate_uno -->
-							{{/ if_eq }}
+			{{# data.closed}}
 
-							{{# if_eq type 'number'}}
-								<div class="desempate desempate_dos clearfix">
-									<div class="desempate_left">
-										<span>{{label}}</span>
-									</div>
-									<div class="desempate_input">
-										<input type="text" name="desempate_dos_minuto">
-									</div><!-- desempate_input -->
-								</div><!-- desempate_dos -->
-							{{/ if_eq }}
+				<div id="insertResults" class="results clearfix">
+					Inserte resultados
+				</div><!-- partidos -->
 
-							{{# if_eq type 'other'}}
-								<div class="desempate desempate_tres clearfix">
-									<div class="desempate_left">
-										<span>{{label}}</span>
-									</div>
-									<div class="desempate_input">
-										<span>SI</span>
-										<input type="radio" name="desempate_tres" value="si">
-										<span>NO</span>
-										<input type="radio" name="desempate_tres" value="no">
-									</div><!-- desempate_input -->
-								</div><!-- desempate_tres -->
-							{{/ if_eq }}
-						{{/ data.tiebreakers}}
-
-				</div><!-- dempates -->
-			{{/ if }}
+			{{/ data.closed}}
 		
 			{{^ data.closed}}		
 				<div id="registerNow" class="quiniela_registro_overlay content clearfix" style="display: none;">
 					<div class="quiniela_registro clearfix">
 						<div class="quiniela_header clearfix">
 							<div class="quiniela_iconos clearfix">
-								<img src="{{cordova_full_path}}images/natural.png">
-								<img src="{{cordova_full_path}}images/soccer.png">
+								{{# if_eq data.point_format "line" }}
+									<img src="{{cordova_full_path}}images/linea.png">
+								{{/ if_eq }}
+								{{# if_eq data.point_format "natural" }}
+									<img src="{{cordova_full_path}}images/natural.png">
+								{{/ if_eq }}
+								<img src="{{cordova_full_path}}images/{{data.sport.icon}}.png">
 							</div><!-- iconos -->
 							<h2>{{name_replaced}}</h2>
 						</div><!-- quiniela_header -->
-						<div class="no_registros clearfix">
-							<span class="pregunta">¿Cuántos registros quieres para esta quiniela?</span>
-							<select name="no_registros">
-								<option>1</option>
-								<option>2</option>
-								<option>3</option>
-								<option>4</option>
-							</select>
-						</div><!-- no_registros -->
-						<div class="copiar_picks clearfix">
-							<span class="pregunta">Utilizar los picks elegidos para todos los registros</span>
-							<input type="checkbox">
-						</div><!-- no_registros -->
-						<div class="balance clearfix">
-							<div class="disponible clearfix">
-								<p>Balance disponible:</p>
-								<div class="disponible_dinero clearfix">
-									<img src="{{cordova_full_path}}images/billete.png">
-									<p>${{ formatCurrency me.balanceReal}} MXN</p>
-								</div><!-- disponible dinero -->
-								<div class="disponible_coins">
-									<img src="{{cordova_full_path}}images/pickcoin.png">
-									<p>{{ formatCurrency me.balancePc}}</p>
-								</div><!-- disponible coins -->
-							</div><!-- disponible -->
-							<div class="descontaran clearfix">
-								<p>Se descontarán:</p>
-								<div class="descontaran_dinero">
-									<img src="{{cordova_full_path}}images/billete.png">
-									<p>$11 MXN</p>
-								</div><!-- descontaran dinero -->
-								<div class="descontaran_coins">
-									<img src="{{cordova_full_path}}images/pickcoin.png">
-									<p>0</p>
-								</div><!-- descontaran coins -->
-							</div><!-- descontaran -->
-							<div class="total clearfix">
-								<p>Entrada:</p>
-								<div class="total_dinero">
-									<img src="{{cordova_full_path}}images/billete.png">
-									<p>$11 MXN + $0 comisión</p>
-								</div><!-- total dinero -->
-								<div class="total_coins">
-									<img src="{{cordova_full_path}}images/pickcoin.png">
-									<p>0 + 0 comisión</p>
-								</div><!-- total coins -->
-							</div><!-- total -->
-						</div><!-- balance -->
 
-						<div class="botones clarfix">
-							<a id="closeRegister"><img src="{{cordova_full_path}}images/regresar.png"></a>
-							<input type="submit" id="sendRegister">
-						</div>
+						<form id="registerToQuinielaForm" method="POST" action="">
+							
+							<div class="no_registros clearfix">
+								<span class="pregunta">¿Cuántos registros quieres para esta quiniela?</span>
+								<select name="no_registros">
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+								</select>
+							</div><!-- no_registros -->
+							<div class="copiar_picks clearfix">
+								<span class="pregunta">Utilizar los picks elegidos para todos los registros</span>
+								<input type="checkbox" name="same_picks" checked>
+							</div><!-- no_registros -->
+							<div class="balance clearfix">
+								<div class="disponible clearfix">
+									<p>Balance disponible:</p>
+									<div class="disponible_dinero clearfix">
+										<img src="{{cordova_full_path}}images/billete.png">
+										<p>${{ formatCurrency me.balanceReal}} MXN</p>
+									</div><!-- disponible dinero -->
+									<div class="disponible_coins">
+										<img src="{{cordova_full_path}}images/pickcoin.png">
+										<p>{{ formatCurrency me.balancePc}}</p>
+									</div><!-- disponible coins -->
+								</div><!-- disponible -->
+								<div class="descontaran clearfix">
+									<p>Se descontarán:</p>
+									{{# if_eq data.entry_currency 'real' }}
+										<div class="descontaran_dinero">
+											<img src="{{cordova_full_path}}images/billete.png">
+											<p>${{ formatCurrency data.entry_fee}} MXN</p>
+										</div><!-- descontaran dinero -->
+									{{/ if_eq }}
+									{{# if_eq data.entry_currency 'pickcoin' }}
+										<div class="descontaran_coins">
+											<img src="{{cordova_full_path}}images/pickcoin.png">
+											<p>{{ formatCurrency data.entry_fee}}</p>
+										</div><!-- descontaran coins -->
+									{{/ if_eq }}
+								</div><!-- descontaran -->
+								<div class="total clearfix">
+									<p>Entrada:</p>
+									<div class="total_dinero">
+										<img src="{{cordova_full_path}}images/billete.png">
+										<p>${{ formatCurrency data.real_entry_fee}} MXN + ${{ formatCurrency data.commission_fee}} comisión</p>
+									</div><!-- total dinero -->
+									<div class="total_coins">
+										<img src="{{cordova_full_path}}images/pickcoin.png">
+										<p>{{ formatCurrency data.real_entry_fee}} + {{ formatCurrency data.commission_fee}} comisión</p>
+									</div><!-- total coins -->
+								</div><!-- total -->
+							</div><!-- balance -->
+
+							<div class="botones clarfix">
+								<a id="closeRegister"><img src="{{cordova_full_path}}images/regresar.png"></a>
+								<input type="submit" id="sendRegister">
+							</div>
+						</form>
 					</div><!-- quiniela-registro -->
 
 				</div><!-- quiniela_registro_overlay -->
