--- a/www/views/profile-documents.hbs
+++ b/www/views/profile-documents.hbs
@@ -16,7 +16,7 @@
 				<ul>
 					{{# data.documents}}
 						<li class="clearfix">
-							<span>{{type}}</span> <span>#####{{ lastFour number }}</span> <span>exp. --</span> <span>{{# valid}}Aprobado{{/ valid}}{{^ valid}}Sin aprobar{{/ valid}}</span>					
+							<span style="width: 15%; text-align: left; display: inline-block;">{{type}}</span> <span style="width: 30%; text-align: left; display: inline-block;">#####{{ lastFour number }}</span> <span style="width: 28%; text-align: left; display: inline-block;">exp. --</span> <span style="width: 25%; text-align: left; display: inline-block;">{{# valid}}Aprobado{{/ valid}}{{^ valid}}Sin aprobar{{/ valid}}</span>					
 						</li>
 					{{/ data.documents}}
 					{{^ data.documents}}
