--- a/www/css/style.css
+++ b/www/css/style.css
@@ -257,23 +257,23 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .quiniela_info {margin-right: 10px; }
 
 .quinielas_dropdowns {width: 100%; margin: 20px 0;}
-.quinielas_dropdowns a {color: #fff; text-decoration: none; display: block; border: 1px solid #414042; padding: 5px; float: left; border-radius: 5px; margin-right: 5%; width: 47.5%;  text-align: center;}
-.quinielas_dropdowns a:last-child {margin-right: 0px;}
+.quinielas_dropdowns select {color: #fff; background: #000; text-decoration: none; display: block; border: 1px solid #414042; padding: 5px; float: left; border-radius: 5px; margin-right: 5%; width: 47.5%;  text-align: center;}
+.quinielas_dropdowns select:last-child {margin-right: 0px;}
 
 .quiniela_single .partidos {width: 100%; border-top: 1px solid #77BC1F;}
 .quiniela_single .partidos h3 {font-weight: 300; margin-top: 10px; margin-bottom: 10px; text-align: center; font-size: 12px;}
 .quiniela_single .partidos .opciones_partido {width: 100%; padding: 10px 0; border-top: 1px solid #8A8A8D;  margin-bottom: 10px;}
 .quiniela_single .partidos .opciones_partido span {width: 33.33%; float: left; display: block; text-align: center; font-size: 12px;}
-.quiniela_single .partidos .partido {width: 100%; margin-bottom: 10px; border-top: 1px solid #8A8A8D; padding-top: 10px; position: relative;}
+.quiniela_single .partidos .partido {padding-bottom: 30px; width: 100%; margin-bottom: 10px; border-top: 1px solid #8A8A8D; padding-top: 10px; position: relative;}
 .quiniela_single .partidos .partido .opcion_partido .linea {width: 100%; margin-top: 0px; float: left;}
 .quiniela_single .partidos .partido .opcion_partido .linea span {width: 100%; margin-top: 20px; text-align: center; display: block;}
 .quiniela_single .partidos .partido .opcion_partido.local {width: 33.33%; float: left;}
 .quiniela_single .partidos .partido .opcion_partido.local .equipo {float: left;}
 .quiniela_single .partidos .partido .opcion_partido.local input {float: left; margin-right: 10px;}
-.quiniela_single .partidos .partido .opcion_partido.local img {float: left; margin-right: 10px;}
+.quiniela_single .partidos .partido .opcion_partido.local img {float: left; margin-right: 5px; margin-left: 15px;}
 .quiniela_single .partidos .partido .opcion_partido.cierre {width: 33.33%; float: left; position: relative; height: 50px;}
 .quiniela_single .partidos .partido .opcion_partido.cierre input {width: 100%; text-align: center;}
-.quiniela_single .partidos .partido .opcion_partido.cierre span {text-align: center; width: 100%; display: block; position: absolute; bottom: 0px;}
+.quiniela_single .partidos .partido .opcion_partido.cierre span {text-align: center; width: 100%; display: block; position: absolute; bottom: 0px; top: 28px;}
 .quiniela_single .partidos .partido .opcion_partido.visitante {width: 33.33%; float: right;}
 .quiniela_single .partidos .partido .opcion_partido.visitante .equipo {float: right; margin-left: 10px;}
 .quiniela_single .partidos .partido .opcion_partido.visitante .equipo span {display: block;}
@@ -323,6 +323,15 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .desempates .desempate.desempate_uno .desempate_input span {float: left; margin-right: 5px; padding-top: 7px;}
 .quiniela_single .desempates .desempate.desempate_uno .desempate_input input[type="text"] {width: 30px; float: left; margin-right: 5px;}
 .quiniela_single .desempates .desempate.desempate_tres .desempate_input input[type="radio"] {width: 30px; float: left; margin-right: 5px; margin-top: 10px; }
+
+.radio_group input[type=radio] {position: absolute; visibility: hidden;}
+.radio_group input[type=radio]:checked ~ .check { border: 5px solid #598D16;}
+.radio_group input[type=radio]:checked ~ .check::before{ background: #598D16;}
+.radio_group label{display: inline-block; width: 84%; height: 2rem; position: relative; font-weight: 300; font-size: 12px; padding: 2px 2px 2px 8px; margin: 0 auto 0 -2rem; z-index: 9; cursor: pointer; -webkit-transition: all 0.25s linear;}
+.local.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: -5px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.visitante.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; right: 0px; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.empate.radio_group .check {display: block; position: absolute; border: 5px solid #AAAAAA; border-radius: 100%; height: 25px; width: 25px; left: 35%; z-index: 8; transition: border .25s linear; -webkit-transition: border .25s linear;}
+.radio_group .check::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 10.5px; width: 10.5px; top: 2px; left: 2px; margin: auto; transition: background 0.25s linear; -webkit-transition: background 0.25s linear; }
 
 
 .quiniela_single .quiniela_registro_overlay {position: fixed; top: 0px; padding-top: 200px; width: 95%; background: url('../images/bg_trans_negro.png') repeat;  }
@@ -548,21 +557,20 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .profile .legales {width: 100%; margin-top: 5%; text-align: center;}
 .profile .legales a.link_legal {font-size: 14px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
 
-
 /*** ABONAR ***/
 
-.abonar {width: 100%; padding-top: 100px; font-size: 10px;}
-.abonar h3 {font-weight: normal; text-align: center; margin-bottom: 20px;}
-.abonar .botones {width: 100%; margin-bottom: 10px; }
-.abonar .botones a {display: block; width: 50%; float: left; border:1px solid #414042; text-align: center;  padding-top: 10px; padding-bottom: 10px; font-size: 12px; text-decoration: none; color: #fff; background: #000; border-radius: 3px;}
-.abonar .botones a.selected {background: #598D16;}
-.abonar form {width: 100%; padding: 5px; background: #000; padding-bottom: 5%; margin-bottom: 10%;}
-.abonar form p {text-align: center; columns: #fff; font-size: 10px; margin-bottom: 20px; padding: 0 10%; line-height: 15px;}
-.abonar form input[type="text"] {width: 100%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
-.abonar form input::placeholder {color: #fff;}
-.abonar form .submit_holder {width: 80px; height: 36px; margin: 10px auto;}
-.abonar form input[type="submit"] {width: 92px; height: 36px; background: url('../images/comprar.png') no-repeat; border: none!important; text-indent: -100000px; text-align: center;}
-.abonar form .fecha_vencimiento select {width: 20%; float: left; margin-right: 10px; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
+.abonar { width: 100%; padding-top: 100px; font-size: 10px;}
+.abonar h3 { font-weight: normal; text-align: center; margin-bottom: 20px;}
+.abonar .botones { width: 100%; margin-bottom: 10px; }
+.abonar .botones a { display: block; width: 50%; float: left; border:1px solid #414042; text-align: center;  padding-top: 10px; padding-bottom: 10px; font-size: 12px; text-decoration: none; color: #fff; background: #000; border-radius: 3px;}
+.abonar .botones a.selected { background: #598D16;}
+.abonar form { width: 100%; padding: 5px; background: #000; padding-bottom: 5%; margin-bottom: 10%;}
+.abonar form p { text-align: center; columns: #fff; font-size: 10px; margin-bottom: 20px; padding: 0 10%; line-height: 15px;}
+.abonar form input[type="text"] { width: 100%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
+.abonar form input::placeholder { color: #fff;}
+.abonar form .submit_holder { width: 80px; height: 36px; margin: 10px auto;}
+.abonar form input[type="submit"] { width: 92px; height: 36px; background: url('../images/comprar.png') no-repeat; border: none!important; text-indent: -100000px; text-align: center;}
+.abonar form .fecha_vencimiento select { width: 20%; float: left; margin-right: 10px; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
 .abonar form .fecha_vencimiento input[type="text"] {width: 30%; border: 1px solid #8A8A8D; background: transparent; font-size: 12px; padding: 10px 5px; margin-bottom: 10px; color: #fff; border-radius: 3px;}
 
 .abonar .botones_abono {width: 100%; background: #000; padding: 10px 0; margin-bottom: 10px; break-before: 3px;}
@@ -682,3 +690,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.header .header_right .header_filtros h4{margin-bottom: 0.5rem;}
 	
 	.small_text{ font-size: 1rem; letter-spacing: 1px; }
+
+	/*Profile*/
+	.profile .tab_profile ul li .edit_tarjeta{ padding-top: 0.5rem; }
+	.profile.documents .tab_profile ul li{}
