--- a/www/css/style.css
+++ b/www/css/style.css
@@ -660,6 +660,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.quiniela .quiniela_aganar{margin-right: 0.75rem;}
 	.quiniela .quiniela_info{margin-right: 0.75rem;}
 	.featured .quiniela_header h2{color: #FF8D00;}
+	.timer_active{color: #d93146; letter-spacing: 1.5px;}
 
 	.exoskeleton{ display: block; min-height: 100vh; width: 100%; top: 0; }
 	.quiniela_header .quiniela_iconos img{ margin-right: 2.5px;}
