--- a/www/css/style.css
+++ b/www/css/style.css
@@ -193,7 +193,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 
 /*quiniela open*/
 
-.quiniela.quiniela_open .quiniela_content .quiniela_info {width: 50%; float: left;}
+.quiniela.quiniela_open .quiniela_content .quiniela_info {width: 43%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_entrada {width: 25%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 25%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa span.number {float: left; margin-left: 5px; color: #77BC1F;}
@@ -671,7 +671,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.menu>ul>li>a{ display: block; width: 100%; height: 100%;}
 	.quiniela .quiniela_entrada{margin-right: 0.75rem;}
 	.quiniela .quiniela_aganar{margin-right: 0.75rem;}
-	.quiniela .quiniela_info{margin-right: 0.75rem;}
+	.quiniela .quiniela_info{margin-right: 0.75rem; width: 43%;}
 	.featured .quiniela_header h2{color: #FF8D00;}
 	.timer_active{color: #d93146; letter-spacing: 1.5px;}
 
