--- a/www/css/style.css
+++ b/www/css/style.css
@@ -679,7 +679,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.quiniela_header .quiniela_iconos img{ margin-right: 2.5px;}
 	.quiniela_single{}
 	.profile .tab_profile ul li label{display: inline-block; width: 84%; height: 2rem;}
-	.tab_profile.transactions {background: url('../images/bg_trans_negro.png') repeat; text-align: center;}
+	.tab_profile.transactions {background: url('../images/bg_trans_negro.png') repeat; text-align: left;}
 	.tab_profile.withraw {background: url('../images/bg_trans_negro.png') repeat; text-align: center;}
 
 	/* LOg out button */
