--- a/www/maqueta/style.css
+++ b/www/maqueta/style.css
@@ -570,6 +570,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .profile .legales {width: 100%; margin-top: 5%; text-align: center;}
 .profile .legales a.link_legal {font-size: 14px; color: #8A8A8D; display: inline-block; margin-bottom: 10%; text-decoration: none;}
 
+.modal_tarjetas {padding: 200px 5% 5% 5%; position: absolute; left: 0px; top: 0px; width: 100%; z-index: 100; background: url('images/bg_trans_negro.png') repeat;}
 
 /*** ABONAR ***/
 
